[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/scripts/ColorSelect.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ColorSelectRandom.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/LeftArrow.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/RightArrow.png" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 20, 36 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 20, 36 )

[node name="ColorSelect" type="HBoxContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -162.5
margin_top = 14.654
margin_right = 162.5
margin_bottom = 50.654
rect_min_size = Vector2( 75, 36 )
custom_constants/separation = 0
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArrow" type="Button" parent="."]
margin_left = 125.0
margin_right = 145.0
margin_bottom = 36.0
rect_min_size = Vector2( 20, 36 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
enabled_focus_mode = 0

[node name="ColorDisplay" type="TextureRect" parent="."]
margin_left = 145.0
margin_right = 180.0
margin_bottom = 36.0
rect_min_size = Vector2( 35, 36 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArrow" type="Button" parent="."]
margin_left = 180.0
margin_right = 200.0
margin_bottom = 36.0
rect_min_size = Vector2( 20, 36 )
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
enabled_focus_mode = 0

[connection signal="button_down" from="LeftArrow" to="." method="_on_left_button_down"]
[connection signal="button_down" from="RightArrow" to="." method="_on_right_button_down"]
